# nicebucket-fix-nix

./: .pre-commit-config.yaml  .versionrc.js  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  bun.nix  eslint.config.mjs  flake.nix  package-lock.json  package.json  result  standard-version-updater.js  tsconfig.json  wdio.conf.js
.github/workflows/: build.yml  release.yml
.nix/: bun.nix
scripts/: e2e-test.sh  release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/s3/: s3_service.rs
src/components/: file-tree-skeleton.tsx  file-tree.tsx
src/lib/: use-dimensions.tsx  use-theme.tsx  utils.test.ts  utils.ts
src/screens/dashboard/: bucket-list.tsx  file-browser.tsx  move-files-dialog.tsx  object-list.tsx  use-dashboard-context.tsx
