[package]
name = "nicebucket"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "^2.9.4", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-keyring = "0.1.0"
specta = "2.0.0-rc.22"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "0.0.9"
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.0", features = ["behavior-version-latest"] }
tokio = { version = "1.48", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
zip = "6.0.0"
infer = "0.19.0"
